initial commit to mirror srk/sck commons

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -15,7 +15,9 @@
   <% } %>
 
   <!-- base url -->
-  <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
+  <!-- <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>"> -->
+
+  <base href=""/>
 
   <%= htmlWebpackPlugin.files.webpackManifest %>
 
