--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -26,3 +26,18 @@
        url('../assets/fonts/roboto-v16-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
+
+@font-face {
+  font-family: 'Arial';
+  font-weight: normal;
+  font-style: normal;
+
+  src: url('../assets/fonts/ArialMT.eot');
+  src: url('../assets/fonts/ArialMT.eot?#iefix') format('embedded-opentype'),
+      url('../assets/fonts/ArialMT.woff2') format('woff2'),
+      url('../assets/fonts/ArialMT.woff') format('woff'),
+      url('../assets/fonts/ArialMT.ttf') format('truetype'),
+      url('../assets/fonts/ArialMT.svg#ArialMT') format('svg');
+  
+}
+
