Added timer to Gen 005

--- a/src/app/scn-gen-005/scn-gen-005.component.html
+++ b/src/app/scn-gen-005/scn-gen-005.component.html
@@ -1,6 +1,7 @@
 <div class="mainPanel">
     <img class="buttonLan" src="../../assets/images/button_lan_tc .png"/>
     <img class="mainBG" src="../../assets/images/bg_1160x640.png"/>
+    <sc2-timer class="timer"></sc2-timer>
     <label  class="mainLabel"> Please select the service. </label>
     <input type="image" class="imgButton1" (click)="nextRoute('/')"src="../../assets/images/button_6.png">
         <div class="buttonDiv1">
