--- a/src/app/scn-gen-005/scn-gen-005.component.scss
+++ b/src/app/scn-gen-005/scn-gen-005.component.scss
@@ -128,3 +128,10 @@
     line-height: 30px;
     text-align: center;
 }
+
+.timer {
+    position:absolute;
+    right: 128.5px;
+    padding: 0;
+    margin: 0;
+  }
