Revised Gen 002 and 005 to have a 3x3 grid

--- a/src/app/scn-gen-002/scn-gen-002.component.scss
+++ b/src/app/scn-gen-002/scn-gen-002.component.scss
@@ -6,58 +6,54 @@
 
 .mainBG {
     position: absolute;
-    top: 190px;
+    top: 110px;
     left: 60px;
+    background-color: #DEFAED;
+    width: 1160px;
+    height: 815px;
+    box-shadow: 1px 1px #ACC2B8;
 }
 
 .mainLabel {
     position: absolute;
-    top: 243.5px;
+    top: 133.5px;
     color: #333333;
     font-weight: bold;
     font-size: 44px;
     left: 302px;
 }
 
-.imgButton1 {
+.firstLeft {
     position: absolute;
-    top: 341.5px;
     left: 132px;
 }
 
-.imgButton2 {
+.secondLeft {
     position: absolute;
-    top: 341.5px;
     left: 489px;
 }
 
-.imgButton3 {
+.thirdLeft {
     position: absolute;
-    top: 341.5px;
     left: 847px;
 }
 
-.imgButton4 {
-    position: absolute;
-    top: 587.5px;
-    left: 132px;
+.firstTop {
+    top: 206.5px;
 }
 
-.imgButton5 {
-    position: absolute;
-    top: 587.5px;
-    left: 489px;
+.secondTop {
+    top: 451.5px;
 }
 
-.imgButton6 {
-    position: absolute;
-    top: 587.5px;
-    left: 847px;
+.thirdTop {
+    top: 697.5px;
 }
+
 
 .backButton {
     position: absolute;
-    top: 885px;
+    top: 940px;
     left: 60px;
 }
 
