--- a/src/app/scn-gen/scn-gen-002/scn-gen-002.component.html
+++ b/src/app/scn-gen/scn-gen-002/scn-gen-002.component.html
@@ -7,7 +7,8 @@
     <span>
         <sc2-menu-button *ngFor="let mi of menuitems"
             index="{{mi.index}}" chiname="{{mi.chiname}}" engname="{{mi.engname}}"
-            menukey="{{mi.menukey}}" iconpathen="{{mi.iconpathen}}" iconpathchi="{{mi.iconpathchi}}" [app]="mi.app"
+            menukey="{{mi.menukey}}" iconpathen="{{mi.iconpathen}}" iconpathchi="{{mi.iconpathchi}}"
+            [app]="mi.app" service="{{mi.service}}"
             haschild="{{mi.haschild}}"></sc2-menu-button>
     </span>
 
