--- a/src/app/scn-gen/scn-gen-iframe/iframe.component.scss
+++ b/src/app/scn-gen/scn-gen-iframe/iframe.component.scss
@@ -8,6 +8,13 @@
      min-height: 100%;
      border: 0px;
  }
+
+ #webview {
+    width: 100%;
+    min-height: 100%;
+    border: 0px;
+}
+
  #parent_iframeparent {
      border: solid 1px #000;
  }
