--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,15 @@ html, body{
   width: 1280px;
   height: 1024px;
   background-color: #FFFDF4;
-  font-family: Arial, Helvetica, sans-serif
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+html.stop-scrolling,
+body.stop-scrolling,
+main.stop-scrolling {
+  height: 100% !important;
+  width: 100% !important;
+  overflow: hidden;
 }
 
 a.active {
