--- a/src/app/scn-gen/scn-gen-002/scn-gen-002.component.html
+++ b/src/app/scn-gen/scn-gen-002/scn-gen-002.component.html
@@ -12,7 +12,7 @@
             haschild="{{mi.haschild}}"></sc2-menu-button>
     </span>
 
-    <input class="backButton" type="button" value="上一頁" (click) = "previousRoute()">
+    <input class="backButton" type="button" value="{{'SCN-SRK-002-1.BACK'|translate}}" (click) = "previousRoute()">
     <label class="footerFirst">SCN-GEN-002-1</label>
 
 </div>
