--- a/src/app/scn-gen/scn-gen-hkic2/scn-gen-view.component.html
+++ b/src/app/scn-gen/scn-gen-hkic2/scn-gen-view.component.html
@@ -29,4 +29,6 @@
             </div>
             
         </div>
+
+        <input class="backButton" type="button" value="{{'SCN-SRK-002-1.BACK'|translate}}" (click) = "previousRoute()">
 </div>
