--- a/src/app/scn-gen/scn-gen-hkic2/scn-gen-view.component.scss
+++ b/src/app/scn-gen/scn-gen-hkic2/scn-gen-view.component.scss
@@ -53,12 +53,13 @@
 
     // Infomation
     .information {
-        width: 930px;
+        width: 1000px;
         height: 610px;
         background-color: #f8f0ef;
         position: absolute;
         top: 214px;
-        right: 59px;
+        right: 100px;
+        left: 100px;
     }
     
     .information div {
