--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-bmp/scn-gen-slipprint-bmp.component.html
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-bmp/scn-gen-slipprint-bmp.component.html
@@ -1,7 +1,6 @@
 <div class="mainPanel">
     <img class="buttonLan" src="../../../../assets/images/button_lan_tc .png"/>
     <!-- <img class="mainBG" src="../../../../assets/images/bg_1160x640.png"/> -->
-    <script src="jquery.qrcode.min.js" type="text/javascript"></script>
     <sc2-timer class="timer"></sc2-timer>
     <div class="mainBG">
         <div class="contentDiv">
@@ -22,7 +21,7 @@
                         左边距：
                     </td>
                     <td class="contentCol">
-                        <input type="number" id="printLeftMargin" name="printLeftMargin" value="{{printLeftMargin}}" style="text-align: right;width: 500px;height: 40px" >
+                        <input type="number" id="printLeftMargin" name="printLeftMargin" value="{{printLeftMargin}}" style="text-align: right;width: 500px;height: 40px" >像素
                     </td>
 
                 </tr>
