--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-cutpaper/scn-gen-slipprint-cutpaper.component.scss
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-cutpaper/scn-gen-slipprint-cutpaper.component.scss
@@ -71,6 +71,7 @@ select ,input,textarea {
 .btnClass {
   width: 150px;
   height: 50px;
+  text-align: center;
   background-color: #BBDEFB;
   border:1px solid;
   border-color: #DEFAED;
