--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-txt/scn-gen-slipprint-txt.component.html
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-txt/scn-gen-slipprint-txt.component.html
@@ -21,7 +21,7 @@
                         打印高度：
                     </td>
                     <td class="contentCol">
-                        <input type="number" id="printHeight" name="printHeight" value="{{printHeight}}" style="text-align: right; width: 500px;height: 40px">
+                        <input type="number" id="printHeight" name="printHeight" value="{{printHeight}}" style="text-align: right; width: 500px;height: 40px">像素
                     </td>
 
                 </tr>
@@ -30,7 +30,7 @@
                         左边距：
                     </td>
                     <td class="contentCol">
-                        <input type="number" id="printLeftMargin" name="printLeftMargin" value="{{printLeftMargin}}" style="text-align: right;width: 500px;height: 40px" >
+                        <input type="number" id="printLeftMargin" name="printLeftMargin" value="{{printLeftMargin}}" style="text-align: right;width: 500px;height: 40px" >像素
                     </td>
 
                 </tr>
