--- a/src/app/scn-gen/scn-gen-007/scn-gen-007.component.html
+++ b/src/app/scn-gen/scn-gen-007/scn-gen-007.component.html
@@ -3,7 +3,7 @@
     <!-- <img class="mainBG" src="../../../assets/images/bg_1160x640.png"/> -->
     <sc2-timer class="timer"></sc2-timer>
     <div class="mainBG"></div>
-    <label  class="mainLabel"> Please select the service. </label>
+    <label  class="mainLabel"> Please select the service / 请选择服务 </label>
     <input type="image" class="firstLeft firstTop" (click)="slipprint()"src="../../../assets/images/button_6.png">
     <div class="buttonDiv1">
         <label (click)="slipprint()" class="label1"> Slipprint / 打印测试</label>
@@ -16,5 +16,5 @@
     <div class="buttonDiv3">
         <label (click)="readCard()">New IC Card/ 二代身份证读卡</label>
     </div>
-    <input class="backButton" type="button" value="{{'SCN-SRK-002-1.BACK'|translate}}" (click) = "previousRoute()">
+    <input class="backButton" class="btnClass" type="button" value="《返回" (click) = "previousRoute()">
 </div>
