--- a/src/app/scn-gen/scn-gen-cardreader/scn-gen-cardreader.component.html
+++ b/src/app/scn-gen/scn-gen-cardreader/scn-gen-cardreader.component.html
@@ -3,7 +3,7 @@
     <!-- <img class="mainBG" src="../../../assets/images/bg_1160x640.png"/> -->
     <sc2-timer class="timer"></sc2-timer>
     <div class="mainBG"></div>
-    <label  class="mainLabel"> Please select the service. </label>
+    <label  class="mainLabel"> Please select the service / 请选择服务 </label>
     <input type="image" class="firstLeft firstTop" (click)="scanICCardData()"src="../../../assets/images/button_6.png">
     <div class="buttonDiv1">
         <label (click)="scanICCardData()" class="label1"> Scan IC Card/ 扫描身份证</label>
@@ -12,5 +12,5 @@
     <div class="buttonDiv2">
         <label (click)="readChipData()"> read IC Card/ 身份证芯片读取</label>
     </div>
-    <label (click)="previousRoute()" class="footerFirst">SCN-GEN-fingerprint</label>
+    <input class="backButton" class="btnClass" type="button" value="《返回" (click) = "previousRoute()">
 </div>
