--- a/src/app/scn-gen/scn-gen-cardreader/scn-gen-cardreader.component.scss
+++ b/src/app/scn-gen/scn-gen-cardreader/scn-gen-cardreader.component.scss
@@ -19,7 +19,7 @@
   color: #333333;
   font-weight: bold;
   font-size: 44px;
-  left: 372px;
+  left: 200px;
 }
 
 .firstLeft {
@@ -121,6 +121,19 @@
   color: white;
   line-height: 30px;
   text-align: center;
+}
+
+.btnClass {
+  position:absolute;
+  left: 60px;
+  top: 25px;
+  font-size: 33px;
+  width: 150px;
+  height: 72px;
+  color: #FFFFFF;
+  background-color: #7d7d7d;
+  border:1px solid;
+  border-color: #DEFAED;
 }
 
 .timer {
