--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint.component.html
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint.component.html
@@ -3,7 +3,7 @@
     <!-- <img class="mainBG" src="../../../assets/images/bg_1160x640.png"/> -->
     <sc2-timer class="timer"></sc2-timer>
     <div class="mainBG"></div>
-    <label  class="mainLabel"> 打印服务. </label>
+    <label  class="mainLabel"> Print Service / 打印服务. </label>
     <input type="image" class="firstLeft firstTop" (click)="printTxt()"src="../../../assets/images/button_6.png">
     <div class="buttonDiv1">
         <label (click)="printTxt()" class="label1"> print text / 打印文本 </label>
@@ -28,6 +28,5 @@
     <div class="buttonDiv6">
         <label (click)="printDemo()" class="label1">Print Demo / Demo打印</label>
     </div>
-    <input class="backButton" type="button" value="《返回" (click) = "previousRoute()">
-    <label class="footerFirst">SCN-GEN-slipprint</label>
+    <input class="backButton" class="btnClass" type="button" value="《返回" (click) = "previousRoute()">
 </div>
