--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-bmp/scn-gen-slipprint-bmp.component.scss
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-bmp/scn-gen-slipprint-bmp.component.scss
@@ -76,6 +76,15 @@ select ,input,textarea {
   border-radius:8px;
   -moz-border-radius:8px; /* Old Firefox */
 }
+.btnClassDisabled {
+  width: 150px;
+  height: 50px;
+  background-color: #A8A8A8;
+  border:1px solid;
+  border-color: #DEFAED;
+  border-radius:8px;
+  -moz-border-radius:8px; /* Old Firefox */
+}
 
 
 
