--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint.component.html
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint.component.html
@@ -4,9 +4,9 @@
     <sc2-timer class="timer"></sc2-timer>
     <div class="mainBG"></div>
     <label  class="mainLabel"> Print Service / 打印服务. </label>
-    <input type="image" class="firstLeft firstTop" (click)="printTxt()"src="../../../assets/images/button_6.png">
+    <input type="image" class="firstLeft firstTop" (click)="printTxtDemo()"src="../../../assets/images/button_6.png">
     <div class="buttonDiv1">
-        <label (click)="printTxt()" class="label1"> print text / 打印文本 </label>
+        <label (click)="printTxtDemo()" class="label1"> print text / 打印文本 </label>
     </div>
     <input type="image" class="secondLeft firstTop" (click)="printBarcode()" src="../../../assets/images/button_6.png"/>
     <div class="buttonDiv2">
