--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-txt/scn-gen-slipprint-txt.component.html
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-txt/scn-gen-slipprint-txt.component.html
@@ -53,17 +53,12 @@
                 </tr>
                 <tr>
                     <td colspan="2" style="padding:10px;">
-                        <input type="button" class="btnClass"  value="《返回" (click) = "previousRoute()">
                         <input type="button" id="printBtn"  class="btnClass"  value="打印" (click) = "startPrint()">
                     </td>
                 </tr>
             </table>
         </div>
     </div>
+    <input  class="backButton" type="button" value="《返回" (click) = "previousRoute()">
 
-
-
-
-
-    <label class="footerFirst">Txt</label>
 </div>
