--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-txt/scn-gen-slipprint-txt.component.scss
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-txt/scn-gen-slipprint-txt.component.scss
@@ -21,6 +21,18 @@
   text-align: center;
 }
 
+.backButton {
+  position: absolute;
+  top: 25px;
+  left: 60px;
+  font-size: 33px;
+  width: 150px;
+  height: 72px;
+  color: #FFFFFF;
+  background-color: #7d7d7d;
+}
+
+
 .contentDiv {
   margin: 5px;
   padding: 5px;
