--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-barcode/scn-gen-slipprint-barcode.component.scss
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-barcode/scn-gen-slipprint-barcode.component.scss
@@ -61,6 +61,18 @@ select ,input,textarea {
 }
 
 
+.backButton {
+  position: absolute;
+  top: 25px;
+  left: 60px;
+  font-size: 33px;
+  text-align: center;
+  width: 150px;
+  height: 72px;
+  color: #FFFFFF;
+  background-color: #7d7d7d;
+}
+
 .btnClass {
   width: 150px;
   height: 50px;
