--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-cutpaper/scn-gen-slipprint-cutpaper.component.html
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-cutpaper/scn-gen-slipprint-cutpaper.component.html
@@ -23,11 +23,11 @@
                 </tr>
                 <tr>
                     <td colspan="2" style="padding:10px;">
-                        <input type="button" class="btnClass"  value="《返回" (click) = "previousRoute()">
                         <input type="button" id="printBtn" class="btnClass" (click)="startPrint()" value="切纸">
                     </td>
                 </tr>
             </table>
         </div>
     </div>
+    <input  class="backButton" type="button" value="《返回" (click) = "previousRoute()">
 </div>
