--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-cutpaper/scn-gen-slipprint-cutpaper.component.scss
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-cutpaper/scn-gen-slipprint-cutpaper.component.scss
@@ -67,6 +67,18 @@ select ,input,textarea {
   -moz-border-radius:5px; /* Old Firefox */
 }
 
+.backButton {
+  position: absolute;
+  top: 25px;
+  left: 60px;
+  font-size: 33px;
+  text-align: center;
+  width: 150px;
+  height: 72px;
+  color: #FFFFFF;
+  background-color: #7d7d7d;
+}
+
 
 .btnClass {
   width: 150px;
