--- a/src/app/scn-gen/scn-gen-002/scn-gen-002.component.scss
+++ b/src/app/scn-gen/scn-gen-002/scn-gen-002.component.scss
@@ -26,7 +26,7 @@
 .backButton {
     position: absolute;
     top: 950px;
-    left: 132px;
+    left: 60px;
     width: 122px;
     height: 52px;
     text-align: center;
@@ -56,3 +56,27 @@
     line-height: 30px;
     text-align: center;
 }
+
+.chbtn {
+    position: absolute;
+    margin-top: 30px;
+    margin-left: 1100px;
+    width: 120px;
+    height: 66px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 60px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #FFFFFF;
+    background-color: #6B6B6B;
+    border-radius: 5px;
+  }
+
+  .footerFirst {
+    color:#BDBDBD;
+    position:absolute;
+    left: 60px;
+    bottom: 2px;
+    font-size: 18px;
+  }
