--- a/src/app/scn-gen/scn-gen-007/scn-gen-007.component.html
+++ b/src/app/scn-gen/scn-gen-007/scn-gen-007.component.html
@@ -1,20 +1,19 @@
 <div class="mainPanel">
-    <img class="buttonLan" src="../../../assets/images/button_lan_tc .png"/>
-    <!-- <img class="mainBG" src="../../../assets/images/bg_1160x640.png"/> -->
+    <input class="buttonLan"  type="button" value="{{'SCN-GEN-SLIPPRINT.LANGUAGE' | translate}}" (click) = "langButton()"/>
     <sc2-timer class="timer"></sc2-timer>
     <div class="mainBG"></div>
-    <label  class="mainLabel"> Please select the service / 请选择服务 </label>
+    <label  class="mainLabel"> {{'SCN-GEN-007.EQUIPMENT-SERVICE' | translate}} </label>
     <input type="image" class="firstLeft firstTop" (click)="slipprint()"src="../../../assets/images/button_6.png">
     <div class="buttonDiv1">
-        <label (click)="slipprint()" class="label1"> Slipprint / 打印测试</label>
+        <label (click)="slipprint()" class="label1"> {{'SCN-GEN-007.EQUIPMENT-SERVICE-SLIPPRINT' | translate}} </label>
     </div>
     <input type="image" class="secondLeft firstTop" (click)="fingerprint()" src="../../../assets/images/button_6.png"/>
     <div class="buttonDiv2">
-        <label (click)="fingerprint()"> Fingerprint / 指纹测试</label>
+        <label (click)="fingerprint()">{{'SCN-GEN-007.EQUIPMENT-SERVICE-FINGERPRINT' | translate}} </label>
     </div>
     <input type="image" class="thirdLeft firstTop" (click)="readCard()" src="../../../assets/images/button_6.png"/>
     <div class="buttonDiv3">
-        <label (click)="readCard()">New IC Card/ 二代身份证读卡</label>
+        <label (click)="readCard()">{{'SCN-GEN-007.EQUIPMENT-SERVICE-CARDREADER' | translate}} </label>
     </div>
-    <input class="backButton" class="btnClass" type="button" value="《返回" (click) = "previousRoute()">
+    <input class="backButton" class="btnClass" type="button" value="《{{'SCN-GEN-SLIPPRINT.RETURN' | translate}}" (click) = "previousRoute()">
 </div>
