--- a/src/app/scn-gen/scn-gen-cardreader/scn-gen-cardreader.component.html
+++ b/src/app/scn-gen/scn-gen-cardreader/scn-gen-cardreader.component.html
@@ -1,16 +1,17 @@
 <div class="mainPanel">
     <img class="buttonLan" src="../../../assets/images/button_lan_tc .png"/>
+    <input class="buttonLan"  type="button" value="{{'SCN-GEN-SLIPPRINT.LANGUAGE' | translate}}" (click) = "langButton()"/>
     <!-- <img class="mainBG" src="../../../assets/images/bg_1160x640.png"/> -->
     <sc2-timer class="timer"></sc2-timer>
     <div class="mainBG"></div>
-    <label  class="mainLabel"> Please select the service / 请选择服务 </label>
+    <label  class="mainLabel"> {{'SCN-GEN-CARDREADER.EQUIPMENT-SERVICE' | translate}} </label>
     <input type="image" class="firstLeft firstTop" (click)="scanICCardData()"src="../../../assets/images/button_6.png">
     <div class="buttonDiv1">
-        <label (click)="scanICCardData()" class="label1"> Scan IC Card/ 扫描身份证</label>
+        <label (click)="scanICCardData()" class="label1"> {{'SCN-GEN-CARDREADER.SCAN-ID-CARD' | translate}}</label>
     </div>
     <input type="image" class="secondLeft firstTop" (click)="readChipData()" src="../../../assets/images/button_6.png"/>
     <div class="buttonDiv2">
-        <label (click)="readChipData()"> read IC Card/ 身份证芯片读取</label>
+        <label (click)="readChipData()"> {{'SCN-GEN-CARDREADER.READ-ID-CHIP' | translate}}</label>
     </div>
-    <input class="backButton" class="btnClass" type="button" value="《返回" (click) = "previousRoute()">
+    <input class="backButton" class="btnClass" type="button" value="《{{'SCN-GEN-CARDREADER.RETURN' | translate}}" (click) = "previousRoute()">
 </div>
