--- a/src/app/scn-gen/scn-gen-fingerprint/scn-gen-fingerprint.component.html
+++ b/src/app/scn-gen/scn-gen-fingerprint/scn-gen-fingerprint.component.html
@@ -1,5 +1,6 @@
 <div class="mainPanel">
     <img class="buttonLan" src="../../../assets/images/button_lan_tc .png"/>
+    <input class="buttonLan"  type="button" value="{{'SCN-GEN-SLIPPRINT.LANGUAGE' | translate}}" (click) = "langButton()"/>
     <!-- <img class="mainBG" src="../../../assets/images/bg_1160x640.png"/> -->
     <sc2-timer class="timer"></sc2-timer>
     <sc2-confirm #fingerprintCode>
@@ -12,14 +13,14 @@
         </div>
     </sc2-confirm>
     <div class="mainBG"></div>
-    <label  class="mainLabel"> Fingerprint Scan service / 指纹扫描服务</label>
+    <label  class="mainLabel"> {{'SCN-GEN-FINGERPRINT-SCAN.FINGERPRINT-SCAN-SERVICE' | translate}}</label>
     <input type="image" class="firstLeft firstTop" (click)="startFingerprintScan()"src="../../../assets/images/button_6.png">
     <div class="buttonDiv1">
-        <label (click)="startFingerprintScan()" class="label1"> Start FingerPrint/ 开始指纹扫描</label>
+        <label (click)="startFingerprintScan()" class="label1"> {{'SCN-GEN-FINGERPRINT-SCAN.START-FINGERPRINT-SCAN' | translate}}</label>
     </div>
     <input type="image" class="secondLeft firstTop" (click)="stopFingerprintScan()" src="../../../assets/images/button_6.png"/>
     <div class="buttonDiv2">
-        <label (click)="stopFingerprintScan()"> Stop FingerPrint/ 停止指纹扫描 </label>
+        <label (click)="stopFingerprintScan()"> {{'SCN-GEN-FINGERPRINT-SCAN.STOP-FINGERPRINT-SCAN' | translate}}</label>
     </div>
-    <input class="backButton" class="btnClass" type="button" value="《返回" (click) = "previousRoute()">
+    <input class="backButton" class="btnClass" type="button" value="《{{'SCN-GEN-FINGERPRINT-SCAN.RETURN' | translate}}" (click) = "previousRoute()">
 </div>
