--- a/src/app/scn-gen/scn-gen-fingerprint/scn-gen-fingerprint.component.scss
+++ b/src/app/scn-gen/scn-gen-fingerprint/scn-gen-fingerprint.component.scss
@@ -3,6 +3,11 @@
   position: absolute;
   right: 59px;
   top: 25px;
+  font-size: 33px;
+  width: 150px;
+  height: 72px;
+  color: #FFFFFF;
+  background-color: #7d7d7d;
 }
 
 .mainBG {
