--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-barcode/scn-gen-slipprint-barcode.component.html
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-barcode/scn-gen-slipprint-barcode.component.html
@@ -1,5 +1,6 @@
 <div class="mainPanel">
     <img class="buttonLan" src="../../../../assets/images/button_lan_tc .png"/>
+    <input class="buttonLan"  type="button" value="{{'SCN-GEN-SLIPPRINT.LANGUAGE' | translate}}" (click) = "langButton()"/>
     <!-- <img class="mainBG" src="../../../assets/images/bg_1160x640.png"/> -->
     <sc2-timer class="timer"></sc2-timer>
     <div class="mainBG">
@@ -7,36 +8,36 @@
             <table width="100%" style="margin: 0px;padding: 0px">
                 <tr>
                     <td colspan="2" style="height: 100px;vertical-align: middle">
-                        <label class="mainLabel"> Slipprint Barcode / 打印一维码. </label>
+                        <label class="mainLabel"> {{'SCN-GEN-SLIPPRINT-BARCODE.PRINT-BARCODE' | translate}}  </label>
                     </td>
                 </tr>
                 <tr>
-                    <td class="firstCol" height="400px" style="vertical-align: middle">打印一维码数：</td>
+                    <td class="firstCol" height="400px" style="vertical-align: middle">{{'SCN-GEN-SLIPPRINT-BARCODE.BARCODE-DATA' | translate}} ：</td>
                     <td class="contentCol">
                         <input type="number" id="printContent" name="printContent" value="{{printContent}}" style=" text-align: right;width: 500px;height: 40px">
                     </td>
                 </tr>
                 <tr>
                     <td class="firstCol">
-                        打印高度：
+                        {{'SCN-GEN-SLIPPRINT-BARCODE.PRINT-HIGHT' | translate}} ：
                     </td>
                     <td class="contentCol">
-                        <input type="number" id="printHeight" name="printHeight" value="{{printHeight}}" style=" text-align: right;width: 500px;height: 40px">像素
+                        <input type="number" id="printHeight" name="printHeight" value="{{printHeight}}" style=" text-align: right;width: 500px;height: 40px">{{'SCN-GEN-SLIPPRINT-BARCODE.PRINT-PIXELS' | translate}}
                     </td>
 
                 </tr>
                 <tr>
                     <td class="firstCol">
-                        左边距：
+                        {{'SCN-GEN-SLIPPRINT-BARCODE.PRINT-LEFT-MARGIN' | translate}}：
                     </td>
                     <td class="contentCol">
-                        <input type="number" id="printLeftMargin" name="printLeftMargin" value="{{printLeftMargin}}" style=" text-align: right;width: 500px;height: 40px" >像素
+                        <input type="number" id="printLeftMargin" name="printLeftMargin" value="{{printLeftMargin}}" style=" text-align: right;width: 500px;height: 40px" >{{'SCN-GEN-SLIPPRINT-BARCODE.PRINT-PIXELS' | translate}}
                     </td>
 
                 </tr>
                 <tr>
                     <td class="firstCol">
-                        条码类型：
+                        {{'SCN-GEN-SLIPPRINT-BARCODE.BARCODE-TYPE' | translate}}：
                     </td>
                     <td class="contentCol">
                         <select id="barcodeType" name="barcodeType" style="width: 500px;height: 40px">
@@ -58,36 +59,36 @@
                 </tr>
                 <tr>
                     <td class="firstCol">
-                        条码文字内容位置：
+                        {{'SCN-GEN-SLIPPRINT-BARCODE.TEXT-CONTENT-LOCATION' | translate}}：
                     </td>
                     <td class="contentCol">
                         <select id="barcodeTextLocation" name="barcodeTextLocation" style="width: 500px;height: 40px">
-                            <option value="O_TEXT">不打印对应的文字</option>
-                            <option value="UP_SIDE">文字位于条码上方</option>
-                            <option value="DOWN_SIDE">文字位于条码下方</option>
+                            <option value="O_TEXT">{{'SCN-GEN-SLIPPRINT-BARCODE.DO-NOT-PRINT-CORRESPONDING-TEXT' | translate}}</option>
+                            <option value="UP_SIDE">{{'SCN-GEN-SLIPPRINT-BARCODE.TEXT-BELOW-BARCODE' | translate}}</option>
+                            <option value="DOWN_SIDE">{{'SCN-GEN-SLIPPRINT-BARCODE.TEXT-ABOVE-BARCODE' | translate}}</option>
                         </select>
                     </td>
 
                 </tr>
                 <tr>
                     <td class="firstCol">
-                        条码对应文字的大小：
+                        {{'SCN-GEN-SLIPPRINT-BARCODE.FONT-SIZE' | translate}}：
                     </td>
                     <td class="contentCol">
                         <select id="barcodeFontSize" name="barcodeFontSize" style="width: 500px;height: 40px">
-                            <option value="SMALL_FONT">小字体</option>
-                            <option value="NORMAL_FONT">正常字体</option>
+                            <option value="SMALL_FONT">{{'SCN-GEN-SLIPPRINT-BARCODE.FONT-SIZE-NORMAL' | translate}}</option>
+                            <option value="NORMAL_FONT">{{'SCN-GEN-SLIPPRINT-BARCODE.FONT-SIZE-SMALL' | translate}}</option>
                         </select>
                     </td>
 
                 </tr>
                 <tr>
                     <td colspan="2" style="padding:10px;">
-                        <input type="button" id="printBtn" class="btnClass" (click)="startPrint()" value="打印">
+                        <input type="button" id="printBtn" class="btnClass" (click)="startPrint()" value="{{'SCN-GEN-SLIPPRINT-BARCODE.PRINT-BTN' | translate}}">
                     </td>
                 </tr>
             </table>
         </div>
     </div>
-    <input  class="backButton" type="button" value="《返回" (click) = "previousRoute()">
+    <input  class="backButton" type="button" value="《{{'SCN-GEN-SLIPPRINT-BARCODE.RETURN' | translate}}" (click) = "previousRoute()">
 </div>
