--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-bmp/scn-gen-slipprint-bmp.component.html
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-bmp/scn-gen-slipprint-bmp.component.html
@@ -1,5 +1,6 @@
 <div class="mainPanel">
     <img class="buttonLan" src="../../../../assets/images/button_lan_tc .png"/>
+    <input class="buttonLan"  type="button" value="{{'SCN-GEN-SLIPPRINT.LANGUAGE' | translate}}" (click) = "langButton()"/>
     <!-- <img class="mainBG" src="../../../../assets/images/bg_1160x640.png"/> -->
     <sc2-timer class="timer"></sc2-timer>
     <div class="mainBG">
@@ -7,31 +8,31 @@
             <table width="100%" style="margin: 0px;padding: 0px">
                 <tr>
                     <td colspan="2" style="height: 100px;vertical-align: middle">
-                    <label class="mainLabel"> Slipprint Bmp / 二维码打印. </label>
+                    <label class="mainLabel"> {{'SCN-GEN-SLIPPRINT-BMP.QR-CODE-PRINT' | translate}} </label>
                 </td>
                 </tr>
                 <tr>
-                    <td class="firstCol" height="400px" style="vertical-align: middle">打印内容：</td>
+                    <td class="firstCol" height="400px" style="vertical-align: middle">{{'SCN-GEN-SLIPPRINT-BMP.PRINT-CONTENT' | translate}} ：</td>
                     <td class="contentCol">
                         <textarea rows="6" id="printContent" name="printContent" style="width: 500px;">{{printContent}}</textarea>
                     </td>
                 </tr>
                 <tr>
                     <td class="firstCol">
-                        左边距：
+                        {{'SCN-GEN-SLIPPRINT-BMP.PRINT-LEFT-MARGIN' | translate}}：
                     </td>
                     <td class="contentCol">
-                        <input type="number" id="printLeftMargin" name="printLeftMargin" value="{{printLeftMargin}}" style="text-align: right;width: 500px;height: 40px" >像素
+                        <input type="number" id="printLeftMargin" name="printLeftMargin" value="{{printLeftMargin}}" style="text-align: right;width: 500px;height: 40px" >{{'SCN-GEN-SLIPPRINT-BMP.PRINT-PIXELS' | translate}}
                     </td>
 
                 </tr>
                 <tr>
                     <td colspan="2" style="padding:10px;">
-                        <input type="button" id="printBtn" class="btnClass" (click)="startPrint()" value="打印">
+                        <input type="button" id="printBtn" class="btnClass" (click)="startPrint()" value="{{'SCN-GEN-SLIPPRINT-BMP.PRINT-BTN' | translate}}">
                     </td>
                 </tr>
             </table>
         </div>
     </div>
-    <input  class="backButton" type="button" value="《返回" (click) = "previousRoute()">
+    <input  class="backButton" type="button" value="《{{'SCN-GEN-SLIPPRINT-BMP.RETURN' | translate}}" (click) = "previousRoute()">
 </div>
