--- a/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-vspace/scn-gen-slipprint-vspace.component.html
+++ b/src/app/scn-gen/scn-gen-slipprint/scn-gen-slipprint-vspace/scn-gen-slipprint-vspace.component.html
@@ -1,5 +1,6 @@
 <div class="mainPanel">
     <img class="buttonLan" src="../../../../assets/images/button_lan_tc .png"/>
+    <input class="buttonLan"  type="button" value="{{'SCN-GEN-SLIPPRINT.LANGUAGE' | translate}}" (click) = "langButton()"/>
     <!-- <img class="mainBG" src="../../../assets/images/bg_1160x640.png"/> -->
     <sc2-timer class="timer"></sc2-timer>
     <div class="mainBG">
@@ -7,22 +8,22 @@
             <table width="100%" style="margin: 0px;padding: 0px">
                 <tr>
                     <td colspan="2" style="height: 100px;vertical-align: middle">
-                        <label class="mainLabel"> Slipprint Vspace / 垂直方向走纸. </label>
+                        <label class="mainLabel"> {{'SCN-GEN-SLIPPRINT-VSPACE.FEED-PAPER-VERTICALLY' | translate}} </label>
                     </td>
                 </tr>
                 <tr>
-                    <td class="firstCol" height="400px" style="vertical-align: middle">垂直方向走纸的像素点数：</td>
+                    <td class="firstCol" height="400px" style="vertical-align: middle">{{'SCN-GEN-SLIPPRINT-VSPACE.PIXELS-FOR-PAPER-FEED-VERTICAL-DIRECTION' | translate}}：</td>
                     <td class="contentCol">
-                        <input id="printContent" type="number" style="text-align: right; width: 500px;" name="printContent" value="{{printContent}}">像素
+                        <input id="printContent" type="number" style="text-align: right; width: 500px;" name="printContent" value="{{printContent}}">{{'SCN-GEN-SLIPPRINT-VSPACE.PRINT-PIXELS' | translate}}
                     </td>
                 </tr>
                 <tr>
                     <td colspan="2" style="padding:10px;">
-                        <input type="button" id="printBtn"  class="btnClass" (click)="startPrint()" value="打印">
+                        <input type="button" id="printBtn"  class="btnClass" (click)="startPrint()" value="{{'SCN-GEN-SLIPPRINT-VSPACE.PRINT-BTN' | translate}}">
                     </td>
                 </tr>
             </table>
         </div>
     </div>
-    <input  class="backButton" type="button" value="《返回" (click) = "previousRoute()">
+    <input  class="backButton" type="button" value="《{{'SCN-GEN-SLIPPRINT-VSPACE.RETURN' | translate}}" (click) = "previousRoute()">
 </div>
