--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-03.component.html
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-03.component.html
@@ -6,7 +6,7 @@
 
 
     <label class="labelStay" >{{'SCN-GEN-STEPS.UPDATE-CONDITION-STAY' | translate}}</label>
-    <label class="label1" >{{'SCN-GEN-STEPS.INSERT-HKID' | translate}}</label>
+    <label class="label1" >{{'SCN-GEN-STEPS.PROCESSING-READ' | translate}}</label>
     <!--   (click)="nextRoute()" -->
     <img src="../../../../../../assets/images/icon_Processing.png" class="main-image" (click)="pass()"/>
     <input #imgNext type="button" (click)="nextRoute()">
