--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-03.component.scss
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-03.component.scss
@@ -1,4 +1,4 @@
-
+@import '../../../../../shared/sc2-confirm/sc2-confirm.components.scss';
 .buttonTC {
   // position: absolute;
   // top: 27px;
@@ -92,4 +92,40 @@
   background: #A891BC;
   // width: 230px;
   // height: 78px;
+}
+
+
+.image {
+  -webkit-animation:spin 4s linear infinite;
+  -moz-animation:spin 4s linear infinite;
+  animation:spin 4s linear infinite;
+}
+
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform:rotate(360deg);
+  }
+}
+
+.procLabel {
+  color: #333333;
+  font-size: 44px;
+}
+
+.centerAll {
+  position: absolute;
+  top: 305px;
+  left: 291px;
+  text-align: center;
 }
