--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-002/gen-step-002-01.component.html
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-002/gen-step-002-01.component.html
@@ -3,7 +3,17 @@
     <input class="buttonTC" type="button" value="{{'SCN-GEN-STEPS.LANGUAGE' | translate}}" (click) = "langButton()">
     <img src="../../../../../../assets/images/menubar_2.png" class="sideimg" />
     <p class="steps-div">{{'SCN-GEN-STEPS.NAVIGATION' | translate}}</p>
-
+    <sc2-confirm #modal1>
+        <div class="app-modal-body">
+            <div class="modal-message">
+                {{messageAbort | translate}}
+            </div>
+            <div class="buttonDiv">
+                <button type="button" class="btnModal confirm" (click)="backRoute()"><span>{{'SCN-GEN-STEPS.YES' | translate}}</span></button>
+                <button type="button" class="btnModal cancel" (click)="modal1.hide()"><span>{{'SCN-GEN-STEPS.NO' | translate}}</span></button>
+            </div>
+        </div>
+    </sc2-confirm>
     <label class="labelStay" >{{'SCN-GEN-STEPS.UPDATE-CONDITION-STAY' | translate}}</label>
     <label class="label1" >{{'SCN-GEN-STEPS.PLACE-LEFT-FP' | translate}}</label>
     <video class="rightimage" autoplay loop>
@@ -12,7 +22,7 @@
     <!--   (click)="nextRoute()" -->
     <img src="../../../../../../assets/images/image12.png" class="main-image" (click)="nextRoute()"/>
     <input #imgNext type="hidden" (click)="nextRoute()">
-     <input type="image" src="../../../../../../assets/images/button_Abort.png" class="exitButton" (click)="nextRoute()" />
-    <input class="exitButton" type="button" value="{{'SCN-GEN-STEPS.ABORT' | translate}}" (click) = "backRoute()">
+     <input type="image" src="../../../../../../assets/images/button_Abort.png" class="exitButton" (click)="modal1.show()" />
+    <input class="exitButton" type="button" value="{{'SCN-GEN-STEPS.ABORT' | translate}}" (click) = "modal1.show()">
     <label class="footerSteps">scn-gen-step-001</label>
 </div>
