--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-01.component.html
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-01.component.html
@@ -20,7 +20,7 @@
     <!--   (click)="nextRoute()" -->
     <img src="../../../../../../assets/images/hkid04.jpg" class="main-image" (click)="insertCard()"/>
     <input #imgNext type="button" (click)="nextRoute()">
-     <input type="image" src="../../../../../../assets/images/button_Abort.png" class="exitButton" (click)="modal1.show()" />
-    <input class="exitButton" type="button" value="{{'SCN-GEN-STEPS.ABORT' | translate}}" (click) = "modal1.show()">
+     <input type="image" src="../../../../../../assets/images/button_Abort.png" class="exitButton" (click)="backRoute()" />
+    <input class="exitButton" type="button" value="{{'SCN-GEN-STEPS.ABORT' | translate}}" (click) = "backRoute()">
     <label class="footerSteps">scn-gen-step-001</label>
 </div>
