--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-002/gen-step-002-01.component.scss
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-002/gen-step-002-01.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../shared/sc2-confirm/sc2-confirm.components.scss';
+//@import '../../../../../shared/sc2-confirm/sc2-confirm.components.scss';
 .buttonTC {
   // position: absolute;
   // top: 27px;
