--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-01.component.html
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-01.component.html
@@ -18,7 +18,9 @@
     <label class="labelStay" >{{'SCN-GEN-STEPS.UPDATE-CONDITION-STAY' | translate}}</label>
     <label class="label1" >{{'SCN-GEN-STEPS.TYPE-OF-HKID-CARD' | translate}}</label>
     <!--   (click)="nextRoute()" -->
-    <img src="../../../../../../assets/images/hkid04.jpg" class="main-image" (click)="insertCard()"/>
+    <!--<img src="../../../../../../assets/images/hkid04.jpg" class="main-image" (click)="insertCard()"/>-->
+    <img src="../../../../../../assets/images/4_1.png" class="indicate_left" (click)="insertNewCard()" />
+    <img src="../../../../../../assets/images/4_2.png" class="indicate_right" (click)="insertNewCard()"/>
     <input #imgNext type="button" (click)="nextRoute()">
      <input type="image" src="../../../../../../assets/images/button_Abort.png" class="exitButton" (click)="backRoute()" />
     <input class="exitButton" type="button" value="{{'SCN-GEN-STEPS.ABORT' | translate}}" (click) = "backRoute()">
