--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-01.component.scss
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-01.component.scss
@@ -93,3 +93,31 @@
   // width: 230px;
   // height: 78px;
 }
+
+
+.indicate_right {
+  position: absolute;
+  margin-top: 335px;
+  margin-left: 800px;
+  width: 452px;
+  height: 290px;
+  text-align: center;
+  vertical-align: middle;
+  color: #FFFFFF;
+  background-color: #6B6B6B;
+  border-radius: 5px;
+}
+
+.indicate_left {
+  position: absolute;
+  margin-top: 335px;
+  margin-left: 300px;
+  width: 452px;
+  height: 290px;
+  text-align: center;
+  vertical-align: middle;
+  color: #FFFFFF;
+  background-color: #6B6B6B;
+  border-radius: 5px;
+}
+
